<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Home.OperationsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button2"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/detailed_performance" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/order"
                android:layout_marginLeft="30dp"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:drawableTop="@drawable/ic_order"
                android:text="@string/Order" />

            <Button
                android:id="@+id/returns"
                android:layout_marginLeft="30dp"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:drawableTop="@drawable/ic_return"
                android:text="@string/Return"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/invoices"
                android:layout_marginLeft="30dp"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:drawableTop="@drawable/ic_incoices"
                android:text="@string/Invoices"/>

            <Button
                android:id="@+id/payment"
                android:layout_marginLeft="30dp"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:drawableTop="@drawable/ic_payment"
                android:text="@string/Payment"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/catalog"
                android:layout_marginLeft="30dp"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:drawableTop="@drawable/ic_catalog"
                android:text="@string/Catalog"/>

            <Button
                android:id="@+id/surveys"
                android:layout_marginLeft="30dp"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:drawableTop="@drawable/ic_surveys"
                android:text="@string/Maintenance"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/maintenance"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginLeft="30dp"
                android:drawableTop="@drawable/ic_maintenance"
                android:text="@string/Maintenance" />

            <Button
                android:id="@+id/deliveries"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginLeft="30dp"
                android:drawableTop="@drawable/ic_delivery"
                android:text="@string/Deliveries" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/customers"
                android:layout_marginLeft="30dp"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:drawableTop="@drawable/ic_customers"
                android:text="@string/Customers"/>

            <Button
                android:id="@+id/cash_van"
                android:layout_marginLeft="30dp"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:drawableTop="@drawable/ic_cashvan"
                android:text="@string/CashVan"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/offers"
                android:layout_marginLeft="30dp"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:drawableTop="@drawable/ic_offer"
                android:text="@string/offers"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>

